index/static/style.css
/* ... */
[aria-expanded="true"] .exp-icon i {
  display: none;
}
[aria-expanded="true"] .exp-icon:not(.exp-nix),
.dope-dot[aria-expanded="true"] {
  content: "";
  color: #fff;
  background: rgb(0, 191, 165);
}
[aria-expanded="true"] .exp-icon::before {
  content: " \f00d";
}
.dope-options [aria-expanded="true"] .exp-icon::before {
  content: " \f063";
}
[aria-expanded="true"] .exp-minus::before {
  content: " \f068";
}

.dope-field {
  font-size: 14px;
  margin-bottom: 10px;
  width: 100%;
  padding: 3px 6px;
  border-radius: .25rem;
  border: 2px solid rgb(0, 191, 165);
  transition: all .15s ease-in-out;
}
.no-touch .dope-field:hover,
.dope-field:focus {
  outline: none;
  box-shadow: inset rgba(0, 0, 0, .5) 0 0 5px;
}
.dope-form-group {
  text-align: left;
}
.dope-form-group label {
  margin-bottom: 0;
}
.dope-wrapper {
  margin: auto;
  padding: 20px 10px;
  text-align: center;
  max-width: 555px;
}
.dope-wrapper > form {
  margin: auto;
  max-width: 275px;
}
.logo {
  padding: 50px 0;
}

/* BOOTSTRAP COLLAPSE */
.collapsing {
  transition: height .1s ease;
}

/* COLORS */
.color-1 {
  background: rgba(0, 191, 165, .95);
}
.color-2 {
  background: rgba(255, 255, 255, .2);
}
.color-3 {
  background: rgba(150, 150, 150, .2);
}
.color-4 {
  background: rgba(0, 191, 165);
}

/* MAIN */
#main-wrapper {
  padding-top: 44px;
  padding-bottom: 40px;
  min-height: 100vh;
}
.drop {
  padding: 0 40px;
  position: relative;
}
/* sticky-kit creates this sibling div which blocks pointer-events */
.drop+div:not(.drop) {
  z-index: -1;
}
#splash-buttons {
  border-top: 2px solid rgba(0, 191, 165, .3);
}
#splash .dope-result {
  border-radius: .25rem;
  border: 2px solid rgba(0, 191, 165, .3);
}

/* DOPEBAR */
#dopebar-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 5000;
}
#dopebar {
  height: 44px;
  padding: 5px 15px;
}
#footer {
  color: rgb(46, 46, 46);
}
#dopebar,
#footer {
  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
}
#dopebar-l {
  padding: 0 0 0 5px;
}
#dopebar-c {
  padding: 0;
  text-align: center;
}
#dopebar-r {
  padding: 0 5px 0 0;
}
#dopebar-r > * {
  float: right;
}
#dopebar-c h1 {
  font-family: Orbitron;
  line-height: 22px;
  font-size: 28px!important;
  margin: 0;
  text-align: center;
  font-weight: 400;
}
#dopebar ul,
#dopebar-collapse ul,
#footer ul {
  display: inline-block;
  list-style: none;
  padding: 0;
  margin: 0;
}
#dopebar ul li,
#footer ul li {
  display: inline-block;
}
#footer p {
  font-size: .85em;
}
#dopebar-collapse {
  position: absolute;
  padding: 10px;
  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
  border-bottom-right-radius: .25rem;
}
#dopebar-collapse ul li {
  margin: 10px 0;
}
.dope-link  {
  padding: 5px 9px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  background: none!important;
  border: none;
  color: rgb(46, 46, 46);
  font-size: 16px;
}
.no-touch .dope-link:hover,
.dope-link:focus,
.dope-link[aria-expanded="true"] {
  color: #fff;
  outline: none;
}

/* SEARCH */
.search-form {
  position: relative;
  display: inline-block;
  width: 200px;
  padding: 0 10px;
}
.search-button {
  padding: 0 4px;
  font-size: 14px;
  cursor: pointer;
  position: absolute;
  right: 14px;
  top: 4px;
  z-index: 150;
  background-color: inherit;
  width: 26px;
  height: 26px;
  border-radius: .25rem;
  border: 2px solid rgba(0, 191, 165, 0);
  transition: all .1s ease-in-out;
}
.no-touch .search-button:hover,
.search-button:focus {
  background: rgb(0, 191, 165);
  border: 2px solid rgb(0, 191, 165);
  color: #fff;
  outline: none;
}
.q {
  font-size: 16px;
  margin: 0;
  padding-right: 28px;
  border: 2px solid rgb(0, 191, 165)
}
.autocomplete-wrapper {
  text-align: left;
  position: absolute;
  background: rgba(0, 191, 165, .95);
  top: calc(100% + 3px);
  left: 0;
  right: 0;
  border: 2px solid #00bfa5;
  border-radius: .25rem;
  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
  z-index: 9001;
}
.autocomplete img {
  float: right;
}
.autocomplete a {
  color: #000;
  display: block;
  padding: 2px;
  overflow: hidden;
}
.autocomplete p {
  height: 50px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 15px 6px;
  margin: 0;
  font-weight: 600;
}
.autocomplete a:hover,
.autocomplete a:focus,
.autocomplete-wrapper > p {
  background: rgba(150, 150, 150, .2);
  color: #fff;
}


/* CHECKBOX */
[type=checkbox] {
  visibility: hidden;
  /* <-- hide the default checkbox, the rest is to hide and allow tabbing, which display:none prevents */
  display: block;
  height: 0;
  width: 0;
  position: absolute;
  overflow: hidden;
}
.dope-check-label span {
  /* <-- style the artificial checkbox */
  position: relative;
  height: 20px;
  width: 20px;
  border: 2px solid rgb(0, 191, 165);
  border-radius: .25rem;
  display: inline-block;
  margin-right: 5px;
}
.dope-check-label p {
  font-size: 1em;
  line-height: 20px;
  margin: 0;
  display: inline-block;
  vertical-align: top;
}
.no-touch [type=checkbox]+span:hover::after,
[type=checkbox]:checked+span::after {
  content: '';
  position: absolute;
  width: 10px;
  height: 7px;
  background: 0 0;
  top: 3px;
  left: 3px;
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}
.no-touch [type=checkbox]+span:hover::after {
  border-left: 3px solid rgb(0, 191, 165);
  border-bottom: 3px solid rgb(0, 191, 165);
}
.no-touch [type=checkbox]:checked+span:hover::after,
[type=checkbox]:checked+span::after {
  border-left: 3px solid rgb(255, 255, 255);
  border-bottom: 3px solid rgb(255, 255, 255);
}
[type=checkbox]:checked+span {
  background: rgb(0, 191, 165);
}

/* SLICK */
#play-carousel {
  display: none;
}
#popular-carousel {
  display: none;
  text-align: center;
}
.slick-link {
  margin: 10px;
  padding: 10px;
  display: block;
  border-radius: .25rem;
  color: rgb(46, 46, 46);
  transition: all .25s ease-in-out;
}
.slick-link h1 {
  font-size: 20px;
  margin: 25px 0;
}
/* ... */

